--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
   <title>CharSheet Companion</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2Pk8vU1us1r28M4P5AN2RFxjv0v9Uqk0hN6D+JQ9v6TztS3xY+4GkW3jw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="styles.css" />
+  <link id="mainStylesheet" rel="stylesheet" href="" />
+  <script>
+    window.APP_VERSION = Date.now().toString();
+    const stylesheet = document.getElementById('mainStylesheet');
+    if (stylesheet) {
+      stylesheet.href = `styles.css?v=${window.APP_VERSION}`;
+    }
+  </script>
 </head>
 <body>
   <div id="app" class="app">
@@ -143,6 +150,12 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    (function loadAppScript() {
+      const script = document.createElement('script');
+      script.src = `script.js?v=${window.APP_VERSION}`;
+      document.body.appendChild(script);
+    })();
+  </script>
 </body>
 </html>
