--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
   <title>CharSheet Companion</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2Pk8vU1us1r28M4P5AN2RFxjv0v9Uqk0hN6D+JQ9v6TztS3xY+4GkW3jw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="styles.css" />
+  <link id="mainStylesheet" rel="stylesheet" href="" />
+  <script>
+    window.APP_VERSION = Date.now().toString();
+    window.DEFAULT_PORTRAIT =
+      'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAQAAAAAYLlVAAAAKklEQVR4Ae3BMQEAAADCIPunNsN+YAAAAAAA' +
+      'AAAAAAAAAAAAAAAAAAD4GlrxAAE9eEIAAAAASUVORK5CYII=';
+    const stylesheet = document.getElementById('mainStylesheet');
+    if (stylesheet) {
+      stylesheet.href = `styles.css?v=${window.APP_VERSION}`;
+    }
+  </script>
 </head>
 <body>
   <div id="app" class="app">
@@ -23,16 +33,6 @@
       <section class="character-list" id="characterList">
         <!-- Character cards inserted by JS -->
       </section>
-      <footer class="select-footer">
-        <button class="btn secondary" id="editCharacterBtn">
-          <i class="fa-solid fa-pen"></i>
-          Editar Seleccionado
-        </button>
-        <button class="btn secondary" id="deleteCharacterBtn">
-          <i class="fa-solid fa-trash"></i>
-          Borrar Seleccionado
-        </button>
-      </footer>
     </div>
 
     <div class="character-sheet hidden" data-screen="sheet">
@@ -42,7 +42,7 @@
       </button>
       <section class="hero-card">
         <div class="hero-background"></div>
-        <img src="https://images.unsplash.com/photo-1546483875-ad9014c88eba?auto=format&fit=crop&w=640&q=80" alt="Retrato del personaje" class="hero-portrait" />
+        <img data-default-portrait alt="Retrato del personaje" class="hero-portrait" />
         <div class="hero-overlay"></div>
         <div class="hero-info">
           <h2 id="heroName" class="hero-name">Nombre del PJ</h2>
@@ -143,6 +143,194 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <div id="characterEditor" class="modal hidden" role="dialog" aria-modal="true" aria-labelledby="editorTitle">
+    <div class="modal-backdrop" id="editorBackdrop"></div>
+    <div class="modal-dialog">
+      <header class="modal-header">
+        <h2 id="editorTitle">Editor de personaje</h2>
+        <button type="button" class="icon-button close" id="closeEditor" aria-label="Cerrar editor">
+          <i class="fa-solid fa-xmark"></i>
+        </button>
+      </header>
+      <form id="characterForm" class="character-form" autocomplete="off">
+        <section class="form-section">
+          <h3>Datos generales</h3>
+          <div class="form-grid two-col">
+            <label class="form-field stacked">
+              Nombre
+              <input id="characterName" name="characterName" type="text" required />
+            </label>
+            <label class="form-field stacked">
+              Nivel
+              <input id="characterLevel" name="characterLevel" type="number" min="1" />
+            </label>
+            <label class="form-field stacked">
+              Raza / Ancestría
+              <input id="characterAncestry" name="characterAncestry" type="text" />
+            </label>
+            <label class="form-field stacked">
+              Clase
+              <input id="characterClass" name="characterClass" type="text" />
+            </label>
+            <label class="form-field stacked">
+              Campaña
+              <input id="characterCampaign" name="characterCampaign" type="text" />
+            </label>
+            <label class="form-field stacked">
+              Lema / Rol
+              <input id="characterTagline" name="characterTagline" type="text" />
+            </label>
+          </div>
+        </section>
+
+        <section class="form-section">
+          <h3>Retrato</h3>
+          <div class="portrait-field">
+            <img id="portraitPreview" data-default-portrait alt="Retrato del personaje" />
+            <div class="portrait-actions">
+              <label class="btn primary file-btn">
+                <i class="fa-solid fa-upload"></i>
+                Subir PNG
+                <input id="portraitInput" type="file" accept="image/png" hidden />
+              </label>
+              <button type="button" class="btn secondary" id="clearPortrait">
+                <i class="fa-solid fa-eraser"></i>
+                Quitar
+              </button>
+            </div>
+          </div>
+        </section>
+
+        <section class="form-section">
+          <h3>Estadísticas</h3>
+          <div class="stats-form-grid">
+            <div class="stat-input" data-stat="fuerza">
+              <h4>Fuerza</h4>
+              <label class="form-field stacked">
+                Base
+                <input id="stat-fuerza-base" name="stat-fuerza-base" type="text" />
+              </label>
+              <label class="form-field stacked">
+                Modificador
+                <input id="stat-fuerza-delta" name="stat-fuerza-delta" type="text" />
+              </label>
+            </div>
+            <div class="stat-input" data-stat="agilidad">
+              <h4>Agilidad</h4>
+              <label class="form-field stacked">
+                Base
+                <input id="stat-agilidad-base" name="stat-agilidad-base" type="text" />
+              </label>
+              <label class="form-field stacked">
+                Modificador
+                <input id="stat-agilidad-delta" name="stat-agilidad-delta" type="text" />
+              </label>
+            </div>
+            <div class="stat-input" data-stat="inteligencia">
+              <h4>Inteligencia</h4>
+              <label class="form-field stacked">
+                Base
+                <input id="stat-inteligencia-base" name="stat-inteligencia-base" type="text" />
+              </label>
+              <label class="form-field stacked">
+                Modificador
+                <input id="stat-inteligencia-delta" name="stat-inteligencia-delta" type="text" />
+              </label>
+            </div>
+            <div class="stat-input" data-stat="carisma">
+              <h4>Carisma</h4>
+              <label class="form-field stacked">
+                Base
+                <input id="stat-carisma-base" name="stat-carisma-base" type="text" />
+              </label>
+              <label class="form-field stacked">
+                Modificador
+                <input id="stat-carisma-delta" name="stat-carisma-delta" type="text" />
+              </label>
+            </div>
+            <div class="stat-input" data-stat="ataque">
+              <h4>Ataque</h4>
+              <label class="form-field stacked">
+                Base
+                <input id="stat-ataque-base" name="stat-ataque-base" type="text" />
+              </label>
+              <label class="form-field stacked">
+                Modificador
+                <input id="stat-ataque-delta" name="stat-ataque-delta" type="text" />
+              </label>
+            </div>
+            <div class="stat-input" data-stat="danio">
+              <h4>Daño</h4>
+              <label class="form-field stacked">
+                Base
+                <input id="stat-danio-base" name="stat-danio-base" type="text" />
+              </label>
+              <label class="form-field stacked">
+                Modificador
+                <input id="stat-danio-delta" name="stat-danio-delta" type="text" />
+              </label>
+            </div>
+            <div class="stat-input" data-stat="movimiento">
+              <h4>Movimiento</h4>
+              <label class="form-field stacked">
+                Base
+                <input id="stat-movimiento-base" name="stat-movimiento-base" type="text" />
+              </label>
+              <label class="form-field stacked">
+                Modificador
+                <input id="stat-movimiento-delta" name="stat-movimiento-delta" type="text" />
+              </label>
+            </div>
+            <div class="stat-input" data-stat="vida">
+              <h4>Vida</h4>
+              <label class="form-field stacked">
+                Base
+                <input id="stat-vida-base" name="stat-vida-base" type="text" />
+              </label>
+              <label class="form-field stacked">
+                Modificador
+                <input id="stat-vida-delta" name="stat-vida-delta" type="text" />
+              </label>
+            </div>
+          </div>
+        </section>
+
+        <section class="form-section">
+          <div class="section-header compact">
+            <h3>Habilidades</h3>
+            <button type="button" class="btn secondary" id="addAbilityBtn">
+              <i class="fa-solid fa-plus"></i>
+              Agregar habilidad
+            </button>
+          </div>
+          <div id="abilitiesContainer" class="abilities-form-container"></div>
+        </section>
+
+        <footer class="form-actions">
+          <button type="button" class="btn secondary" id="cancelEditor">Cancelar</button>
+          <button type="submit" class="btn primary">Guardar</button>
+        </footer>
+      </form>
+    </div>
+  </div>
+
+  <script>
+    (function applyDefaultPortraits() {
+      const placeholder = window.DEFAULT_PORTRAIT;
+      document.querySelectorAll('[data-default-portrait]').forEach((img) => {
+        if (!img.getAttribute('src')) {
+          img.setAttribute('src', placeholder);
+        }
+      });
+    })();
+  </script>
+
+  <script>
+    (function loadAppScript() {
+      const script = document.createElement('script');
+      script.src = `script.js?v=${window.APP_VERSION}`;
+      document.body.appendChild(script);
+    })();
+  </script>
 </body>
 </html>
