--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#060507" />
   <title>CharSheet Companion</title>
+  <link rel="manifest" href="manifest.webmanifest" />
+  <link rel="icon" type="image/svg+xml" href="assets/icon.svg" />
+  <link rel="apple-touch-icon" href="assets/icon-maskable.svg" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -125,6 +129,10 @@
             <label class="form-field stacked">
               Clase
               <input id="characterClass" name="characterClass" type="text" />
+            </label>
+            <label class="form-field stacked">
+              Campaña / Compañía
+              <input id="characterCampaign" name="characterCampaign" type="text" />
             </label>
           </div>
         </section>
